@@ -1,0 +1,1 @@
+MD5 81b6172dd3e270947e17430c4a28bb8b rapidsvn-0.7.0.tar.gz 540092
