@@ -1,13 +1,13 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/rapidsvn/Attic/rapidsvn-0.6.0.ebuild,v 1.3 2004/07/15 00:02:07 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/rapidsvn/Attic/rapidsvn-0.6.0.ebuild,v 1.4 2004/12/04 07:51:45 dragonheart Exp $
 
 DESCRIPTION="Cross-platform GUI front-end for the Subversion revision system."
 HOMEPAGE="http://rapidsvn.tigris.org/"
 SRC_URI="http://www.rapidsvn.org/download/${P}.tar.gz"
 LICENSE="Apache-1.1"
 SLOT="0"
-KEYWORDS="~x86 ~ppc ~sparc ~amd64"
+KEYWORDS="x86 ~ppc ~sparc ~amd64"
 IUSE="doc"
 
 DEPEND=">=dev-util/subversion-1.0.0
