@@ -1,6 +1,12 @@
 # ChangeLog for dev-util/rapidsvn
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/rapidsvn/Attic/ChangeLog,v 1.12 2004/06/25 02:44:54 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/rapidsvn/Attic/ChangeLog,v 1.13 2004/12/04 07:51:45 dragonheart Exp $
+
+*rapidsvn-0.7.0 (04 Dec 2004)
+
+  04 Dec 2004; Daniel Black <dragonheart@gentoo.org> -rapidsvn-0.5.0.ebuild,
+  +rapidsvn-0.7.0.ebuild:
+  Version bump as per bug #73191. Thanks to Richard Cantzler <cantzler@uiuc.edu>
 
   02 Jun 2004; David Holm <dholm@gentoo.org> +metadata.xml,
   rapidsvn-0.6.0.ebuild:
